--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,306 +1,132 @@
-/* *{
+/* * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Inter', sans-serif;
-}
-
-html, body{
-  width: 100%;
-  height: 100%;
-}
-
-#background{
-  width: 100%;
-  height: 100%;
-  background-image: url('/images/bg.jpg');
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-
-#overlay{
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.65);
-}
-
-nav{
-  width: 100%;
-  height: 15vh;
-  margin: 0 auto;
-  background-color: rgba(0, 0, 0, 0.5);
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0 80px;
-}
-
-#logo{
+  }
+  body {
+    background-color: peachpuff;
+  }
+  .task-container {
+  background-color: #e27442;
   color: white;
-  font-weight: 600;
-  border: 10px solid;
-  border-image-slice: 1;
-  border-width: 5px;
-  padding: 10px 15px;
-  border-image-source: linear-gradient(tp left, #c832db, #ec3a3a);
-  font-size: 28px;
-  font-family: "Montserrat", sans-serif;
-}
-
-
-#links{
-  width: 500px;
-  display: flex;
-  justify-content: space-around;
-  color: white;
-}
-
-#content{
   position: absolute;
-  top: 50%;
+  top:50%;
   left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
-  color: white;
-}
-
-#content h3{
-  font-weight: 400;
-  font-size: 45px;
-}
-
-.link{
-  cursor: pointer;
-}
-
-.link:hover{
-  color: #971d42;
-  text-decoration: none;
-  letter-spacing: 3 px;
-  transition: 0.3s ease-in;
-}
-
-a{
-  color: white;
-  text-decoration: none;
-  transition: 0.3s ease-in;
-}
-
-@media (max-width:768px){
-  #links{
-    display: none;
-  }
-  #hemberger{
-    display: inline-block;
-    color: white;
-    cursor: pointer;
-    font-size: 35px;
-
-  }
-  #navpage{
-    width: 100%;
-    height: 100%;
-    background-color: black;
-    color: white;
-    position: absolute;
-    z-index: 99; 
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transform: translate(-100%);
-    transition: 0.3s ease-in-out;
-
-  }
-  #mobilelinks{
-   display: flex;
-   flex-direction: column;
-   justify-content: space-around;
-   align-items: center;
-   text-align: center;
-  }
-
-  #mobilelinks a{
-    display: inline-block;
-    margin: 30px 0;
-
-  }
-  #close{
-    font-size: 35px;
-    color: white;
-    position: absolute;
-    right: 10%;
-    top: 6%;
-    cursor: pointer;
-  }
-
-  h1{
-    font-size: 100px;
-  }
-
-}
-
-@media (min-width:768){
-  #hemberger{
-    color: white;
-    display: none;
-  }
-  #navpage{
-    display: none;
-  
-  }
-  #content h1{
-    font-size: 170px;
-    font-weight: 600;
-
-  }
-} */
-
-
-*{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: 'Inter', sans-serif;
-}
-
-html,body{
-  width: 100%;
-  height: 100%;
-}
-#background{
-  width: 100%;
-  height: 100%;
-  background-image: url('/images/bg.jpg');
-  background-position: center ;
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-#overlay{
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0,0,0,0.65);
-}
-nav{
-  width: 100%;
-  height: 15vh;
-  margin: 0 auto;
-  background-color:rgba(0,0,0,0.5);
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0 80px;
-}
-
-#logo{
-  color: white;
-  font-weight: 600;
-  border: 10px solid;
-  border-image-slice: 1;
-  border-width: 5px;
-  padding: 10px 15px;
-  border-image-source: linear-gradient(to left, #c832db, #ec3a3a);
-  font-size: 28px;
-  font-family: 'Montserrat', sans-serif;
-}
-
-#links{
-  width: 500px;
-  display: flex;
-  justify-content: space-around;
-  color: white;
-}
-#content{
-  position: absolute;
-  top: 50%;
-  left: 50%;
+  padding: 20px;
+  width: 600px;
   transform: translate(-50%,-50%);
-  text-align: center;
-  color: white;
-}
-/* stop here today */
-
-
-#content h3{
-  font-weight: 400;
-  font-size: 45px;
-}
-
-.link
-{
-  cursor: pointer;
-}
-
-.link:hover{
-  color: #971d42;
-  text-decoration: none;
-  letter-spacing: 3px;
-  transition: 0.3s ease-in;
-}
-a{
-  color: white;
-  text-decoration: none;
-  transition: 0.3s ease-in;
-
-}
-
-@media (max-width:768px){
-  #links{
-    display: none;
+  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   }
-  #hemberger{
-    display: inline-block;
-    color: white;
-    cursor: pointer;
-    font-size: 35px;
-
+  .add-task-container {
+    color:green;
+    position: absolute;
+    padding: 20px;
+    width: 200px;
+    border-radius: 20px;
+    align-items: center;
   }
-  #navpage{
-    width: 100%;
-    height: 100%;
+  input[type=text] {
+    width: 250px;
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+    height: 30px;
+    border-color:grey;
+    border-radius: 10px;
+  }
+  input[type=submit] {
+    width: 50px;
+    height:30px;
+    text-align: center;
     background-color: black;
     color: white;
-    position: absolute;
-    z-index:99;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transform: translateY(-100%);
-    transition: 0.3s ease-in-out;
   }
-  #mobilelinks{
+  ul {
+      padding-top: 20px;
+      color: white;
+      font-size: 25px;
+      font-weight: bold;
+      padding-left: 20px;
+  }
+  a {
+    padding-left: 30px;
+    size: 40px;
+    float: right;
+  }
+  span {
+    color: black;
+  }
+  .cancel {
+    padding-top: 7px;
+    size: 30px;
+  } */
+
+
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    }
+    body {
+    background-color: peachpuff;
+    }
+    .task-container {
+    background-color: #e27442;
+    color: white;
+    position: absolute;
+    top:50%;
+    left: 50%;
+    padding: 20px;
+    width: 600px;
+    transform: translate(-50%,-50%);
+    border-radius: 20px;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
     align-items: center;
-    text-align: center;
-  }
-  #mobilelinks a{
-    display: inline-block;
-    margin: 30px 0;
-  }
-  #close{
-    font-size: 35px;
-    color: white;
+    }
+    .add-task-container {
+    color:green;
     position: absolute;
-    right: 10%;
-    top: 6%;
-    cursor: pointer;
-  }
-  h1{
-    font-size: 100px;
-  }
-}
-@media (min-width:768px){
-  #hemberger{
+    padding: 20px;
+    width: 200px;
+    border-radius: 20px;
+    align-items: center;
+    }
+    input[type=text] {
+    width: 250px;
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+    height: 30px;
+    border-color:grey;
+    border-radius: 10px;
+    }
+    input[type=submit] {
+    width: 50px;
+    height:30px;
+    text-align: center;
+    background-color: black;
     color: white;
-    display: none;
-  }
-  #navpage{
-    display: none;
-  }
-  #content h1{
-    font-size: 170px;
-    font-weight: 600;
-  }
-}
+    }
+    ul {
+    padding-top: 20px;
+    color: white;
+    font-size: 25px;
+    font-weight: bold;
+    padding-left: 20px;
+    }
+    a {
+    padding-left: 30px;
+    size: 40px;
+    float: right;
+    }
+    span {
+    color: black;
+    }
+    .cancel {
+    padding-top: 7px;
+    size: 30px;
+    }
