--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,51 +1,82 @@
+<!-- <!DOCTYPE html>
+<html>
+  <head>
+    <title>My Tasker</title>
+    <link rel="stylesheet" href=" https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
+  </head>
+  <body>
+
+    <div class="task-container">
+      <h2>My tasker</h2>
+      <div class="add-task-container">
+        <form method="POST" action="submit">
+          <input type="text" name="task">
+          <input type="submit" value="add">
+        </form>
+      </div>
+
+    <ul>
+      <% taskscollection.forEach(details=>{ %>
+       <li>
+         <div>
+           <%= details.content %>
+           <a href="/remove/<%= details._id %>" class="remove"><span class="fas fa-trash"></span></a>
+           <a href=" edit/<%=details._id %>" class="edit"><span class="fas fa-pen"></span></a>
+           
+         </div>
+       </li>
+      <% }) %>
+    </ul>
+
+  </div>
+
+  </body>
+</html> -->
+
+
+
+
+  
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-   
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600;700&family=Montserrat:wght@400;500;600;700;800&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
-    <link rel="stylesheet" href="/stylesheets/style.css">
-    <title>Music Concert</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+      integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="stylesheets/style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <title>My Tasker App</title>
+
   </head>
-<body>
-  
 
-  <div id="navpage">
-    <div id="close"><i class="ri-close-line"></i></div>
-    <div id="mobilelinks">
-      <a href="/" class="link">HOME</a>
-      <a href="/about" class="link">ABOUT</a>
-      <a href="/events" class="link">GALLERY</a>
-      <a href="/contact" class="link">CONTACT</a>
-    </div>
-  </div>
-
-  <div id="background">
-    <div id="overlay">
-      <nav>
-        <div id="logo">RATED R</div>
-        <span id="hemberger"><i class="ri-menu-2-line"></i></span>
-        <div id="links">
-          <a href="/" class="link">HOME</a>
-          <a href="/about" class="link">ABOUT</a>
-          <a href="/events" class="link">GALLERY</a>
-          <a href="/contact" class="link">CONTACT</a>
-        </div>
-      </nav>
-      <div id="content">
-        <h1>RATED R</h1>
-        <h3>Life is a song, love is the music.</h3>
+  <body>
+    <div class="task-container">
+      <h2> My Tasker</h2><br />
+      <div class="add-task-conatiner">
+        <form method="POST" action="submit">
+          <input type="text" name="task">
+          <input type="submit" value="Add" />
+        </form>
       </div>
+      <ul>
+        <% taskscollection.forEach(details=> { %>
+          <li>
+            <div>
+              <%=  details.content %>
+                <a href="/remove/<%= details._id %>" class="remove"><span class="fas fa-trash"></span></a>
+                <a href=" /edit/<%=details._id %>" class="edit"><span class="fas fa-pen"></span></a>
+            </div>
+          </li>
+          <% }) %>
+      </ul>
     </div>
-  </div>
+  </body>
 
-
-  <script src="/javascripts/script.js"></script>
-
-
-</body>
 </html>
+
+
